[gd_scene load_steps=4 format=3 uid="uid://dy5ct0yvx4u4y"]

[ext_resource type="Script" uid="uid://jrtjgcosdoxh" path="res://scripts/ui/TrainingTeamRow.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_row"]
bg_color = Color(0.15, 0.15, 0.22, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.2, 0.2, 0.28, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.35, 0.35, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TrainingTeamRow" type="PanelContainer"]
custom_minimum_size = Vector2(0, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_row")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TeamLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "訓練隊伍 1"
horizontal_alignment = 1

[node name="EditButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "編輯隊伍"

[node name="ClearButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "清空隊伍"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CardsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Slot1" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="CardPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="CardButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel"]
layout_mode = 2
flat = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="CardTextureContainer" type="Control" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
mouse_filter = 2

[node name="CardTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 11
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelBackground" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer/LevelLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="CardSprite" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="ElementLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "[屬性]"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "空位"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RemoveButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot1"]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "移除"

[node name="Slot2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="CardPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="CardButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel"]
layout_mode = 2
flat = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="CardTextureContainer" type="Control" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
mouse_filter = 2

[node name="CardTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 11
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelBackground" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer/LevelLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="CardSprite" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="ElementLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "[屬性]"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "空位"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RemoveButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot2"]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "移除"

[node name="Slot3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="CardPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="CardButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel"]
layout_mode = 2
flat = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="CardTextureContainer" type="Control" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
mouse_filter = 2

[node name="CardTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 11
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelBackground" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer/LevelLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="CardSprite" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="ElementLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "[屬性]"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "空位"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RemoveButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot3"]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "移除"

[node name="Slot4" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="CardPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="CardButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel"]
layout_mode = 2
flat = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="CardTextureContainer" type="Control" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
mouse_filter = 2

[node name="CardTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 11
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelBackground" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer/LevelLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="CardSprite" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="ElementLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "[屬性]"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "空位"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RemoveButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot4"]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "移除"

[node name="Slot5" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="CardPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="CardButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel"]
layout_mode = 2
flat = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="CardTextureContainer" type="Control" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
mouse_filter = 2

[node name="CardTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 11
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelBackground" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer/LevelLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="CardSprite" type="ColorRect" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton/MarginContainer/VBoxContainer/CardTextureContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="ElementLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "[屬性]"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5/CardPanel/CardButton/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "空位"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RemoveButton" type="Button" parent="MarginContainer/HBoxContainer/CardsContainer/Slot5"]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "移除"
